2010-09-08  Dmitry Dulepov  <dmitry@typo3.org>

	* Refactoring modfunc1/index.php
	* Refactor redirect view and add search to it

2010-08-31  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed forge issue #9285: t3blog problems with RealURL when using file names
	* Updated copyright information
	* Removed unused modules

2010-08-30  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #14780: Resolving incorrect id when only language-preVar gets passed (thanks to Bernhard Kraft)
	* Fixed bug #15481: Visibility of tx_realurl_advanced::encodeTitle()
	* Fixed bug #10774: localized pagePath encoding by tx_realurl_advanced not working when using new _DOMAINS config
	* Fixed bug #14266: set as redirect does not work
	* Fixed bug #15599: Pressing "Cancel" in redirect view does not hide the form
	* Released version 1.9.4

2010-08-25  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #15552: Impossible to have file names on the root page
	* Fixed bug #15335: PHP Warning: Invalid argument supplied for foreach() in class.tx_realurl_tcemain
	* Fixed bug #15435: Editing of redirects not possible anymore
	* Fixed bug #15366: uniqalias for an item with the same name is rotatory generated als -1 and -2 (thanks to David Frerich)

2010-06-22  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #14815: missing extension configuration causes PHP errors
	* Fixed bug #14700: Length of tablename field in tx_realurl_uniqalias is too short
	* Fixed bug #14820: Clear cache when page's "hidden" flag changes
	* Fixed bug #14821: Path cache is not cleared when page cache is cleared

2010-06-14  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #14684: tx_realurl_tcemain->clearUniqueAlias SQL error
	* Released version 1.9.3

2010-06-09  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #14661: wrong URL if defaultToHTMLsuffixOnPrev is set to ".html"
	* Fixed bug #14667: Missed trailing slashes
	* Fixed bug #14657: 404 error on some shortcut pages